# rustybara

./: .gitignore  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
.github/workflows/: release.yml  wasm-build.yml
doc/: rustybara-icc-plan.md  rustybara_design_doc.md
installer/linux/: install.sh
installer/macos/: install.sh
rbara/: Cargo.toml
rbara-gui/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
rbara-gui/.cargo/: config.toml
rbara-gui/capabilities/: default.json
rbara-gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
rbara-gui/frontend/src/: App.svelte  main.js  styles.css
rbara-gui/frontend/src/components/: ActionBar.svelte  ActionSidebar.svelte  ActionTabBar.svelte  AddTrimBoxPanel.svelte  CmdBar.svelte  ConvertColorSpacePanel.svelte  ExportPanel.svelte  ExtractPagesPanel.svelte  FileStrip.svelte  FlattenSpotsPanel.svelte  HelpOverlay.svelte  LogDrawer.svelte  LogPane.svelte  LogStrip.svelte  MetaAccordion.svelte  MetaGrid.svelte  Notice.svelte  OutputPanel.svelte  ParamsPanel.svelte  PreviewStrip.svelte  RemapPanel.svelte  ResizePanel.svelte  RunButton.svelte  SplitPagesPanel.svelte  SpotColorsModal.svelte  StatusBar.svelte  StitchPagesPanel.svelte  Titlebar.svelte  Toolbar.svelte  TrimPanel.svelte
rbara-gui/frontend/src/lib/: api.js  context.js  quips.js
rbara-gui/src/: commands.rs  lib.rs  main.rs
rbara/src/: cli.rs  main.rs  process.rs
rbara/src/tui/: app.rs  events.rs  mod.rs  quips.rs  ui.rs
rbv/: Cargo.toml
rbv/src/: main.rs  texture.rs  viewer.rs
rustybara/: Cargo.toml
rustybara-icc/: Cargo.toml
rustybara-icc/src/: color_space.rs  error.rs  intent.rs  lib.rs  main.rs  pdf.rs  pixel_format.rs  transform.rs
rustybara-icc/src/profiles/: mod.rs
rustybara-icc/src/profiles/data/: README.md
rustybara-wasm/: Cargo.toml
rustybara-wasm/src/: lib.rs
rustybara-website/static/wasm/: rustybara_wasm.d.ts  rustybara_wasm.js  rustybara_wasm_bg.wasm
rustybara/src/: error.rs  lib.rs  pipeline.rs
rustybara/src/color/: icc.rs  mod.rs  transform.rs
rustybara/src/encode/: mod.rs  save.rs
rustybara/src/geometry/: matrix.rs  mod.rs  rect.rs
rustybara/src/pages/: boxes.rs  mod.rs  split.rs  spread.rs  stitch.rs
rustybara/src/raster/: config.rs  mod.rs  render.rs
rustybara/src/stream/: color_ops.rs  filter.rs  layout.rs  mod.rs
rustybara/tests/: encode.rs  geometry.rs  pages.rs  pipeline.rs  raster.rs  stream.rs
