[package]
name = "rbara-gui"
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"
description = "Tauri v2 desktop GUI for the rustybara prepress PDF toolkit"

[lib]
name = "rbara_gui_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rbara-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustybara = { path = "../rustybara", features = ["color"] }
rustybara-icc = { path = "../rustybara-icc" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.44"
