[package]
name = "rustybara-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for rustybara — in-browser PDF operations"
license = "LGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen-samples"
path = "src/bin/gen_samples.rs"
required-features = ["gen-samples"]

[features]
gen-samples = ["dep:lopdf"]

[dependencies]
rustybara = { path = "../rustybara", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
lopdf = { version = "0.40.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
